--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!! Maaf belum bisa ngasih apa-apa. semangat ya kamu kuliahnya, banyak banyak sabar kalau ngadepin temen kuliahnya. kalau capek istirahat bukan malah mikir hal hal yang gak berguna.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">i'm always with you! ;)</h5>
             </div>
         </div>
 
