--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Mba Anis</span>
+                <span id="name">Izza</span>
             </h1>
             <p class="two" id="greetingText">Bagaimana hari mu!</p>
         </div>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/mbaAnis.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/izza.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
